Sort with datatables, not tested

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -79,7 +79,7 @@
     </div>
   <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
   <script charset="utf-8">
-    const dataTable = new simpleDatatables.DataTable("#stats");
+    const dataTable = new simpleDatatables.DataTable("#stats", {"order": [[ 7, "desc" ]]});
   </script>
   </body>
 </html>
