use rounds, not num_played

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -58,7 +58,7 @@
         <thead>
         <tr>
             <th>Name</th>
-            <th>Num. Played</th>
+            <th>Rounds</th>
             <th>Kills</th>
             <th>Deaths</th>
             <th>Headshots</th>
