add updated time

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -109,7 +109,8 @@
   <body>
     <div class="container">
       <h1>El Parque - UrT Stats</h1>
-      <h5>{{server_data}}</h5>
+      <h3>{{server_data}}</h3>
+      <h5>Updated: {{dt}}</h5>
       <ol>
       {% for player in players_data %}
         <li>{{player}}</li>
