--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -145,9 +145,10 @@
             <th>Kills</th>
             <th>Deaths</th>
             <th>Headshots</th>
-            <th>Max Kill Streak</th>
+            <th>Streak</th>
             <th>Suicides</th>
             <th>Ratio</th>
+            <th>Score</th>
           </tr>
         </thead>
         <tbody>
@@ -161,6 +162,7 @@
           <td class="number">{{player.5}}</td>
           <td class="number">{{player.6}}</td>
           <td class="number">{{player.7}}</td>
+          <td class="number">{{player.8}}</td>
         </tr>
         {% endfor %}
         </tbody>
