Added ratio and lethality fields

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -147,6 +147,8 @@
             <th>Headshots</th>
             <th>Streak</th>
             <th>Suicides</th>
+            <th>Ratio</th>
+            <th>Lethality</th>
             <th>Score</th>
           </tr>
         </thead>
@@ -161,6 +163,8 @@
           <td class="number">{{player.5}}</td>
           <td class="number">{{player.6}}</td>
           <td class="number">{{player.7}}</td>
+          <td class="number">{{player.8}}</td>
+          <td class="number">{{player.9}}</td>
         </tr>
         {% endfor %}
         </tbody>
