Align search and pagination on the sides

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -114,6 +114,10 @@
       .dataTable-wrapper {
         width: 100%;
       }
+      .dataTable-top,
+      .dataTable-bottom {
+        padding: 8px 0;
+      }
       .number {
         font-family: monospace;
       }
