fix table order

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -241,6 +241,6 @@
       </div>
     </div>
   <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
-  <script>const dataTable = new simpleDatatables.DataTable("#stats", {"order": [[ 7, "desc" ]]});</script>
+  <script>const dataTable = new simpleDatatables.DataTable("#stats", {"order": [[ 9, "desc" ]], "paging": false});</script>
   </body>
 </html>
