Change data headings

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -195,7 +195,7 @@
           <h3>{{player}}</h3>
           <div class="grid grid-1of3">
             <div class="grid-cell">
-              <h4>Frags</h4>
+              <h4>Fragged</h4>
               <table>
                 <thead>
                   <tr>
@@ -214,7 +214,7 @@
               </table>
             </div> <!-- frags -->
             <div class="grid-cell">
-              <h4>Deaths</h4>
+              <h4>Fragged by</h4>
               <table>
                 <thead>
                   <tr>
@@ -233,7 +233,7 @@
               </table>
             </div> <!-- deaths -->
             <div class="grid-cell">
-              <h4>Weapons</h4>
+              <h4>Fragged Using</h4>
               <table>
                 <thead>
                   <tr>
