--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -45,26 +45,24 @@
       .number {
         font-family: monospace;
       }
-      .card-player table{
+      .card-player table {
         margin-bottom: 0;
       }
-      .card-player thead{
+      .card-player thead {
         display: none;
       }
-      .go-up {
-        background-color: #01579b;
-        border-radius: 100%;
-        bottom: 1em;
-        color: #fff;
-        font-size: 2rem;
-        height: 1em;
-        line-height: 0.75em;
-        position: fixed;
-        right: 1em;
-        text-align: center;
-        text-decoration: none;
-        width: 1em;
-      }
+      background-color: #2780e3;
+      border-radius: 100%;
+      bottom: 1em;
+      color: #fff;
+      font-size: 2.5rem;
+      height: 1.25em;
+      line-height: 1em;
+      position: fixed;
+      right: 1em;
+      text-align: center;
+      text-decoration: none;
+      width: 1.25em;
     </style>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -188,7 +186,7 @@
         {% endfor %} <!-- players -->
       </section> <!-- players section -->
     </div> <!-- container -->
-    <a href="#" class="go-up">&uarr;</a>
+    <a href="#" class="go-up" role="button">&uarr;</a>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
