--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -125,7 +125,7 @@
                   <a class="nav-link" id="link-deaths-{{player}}" data-toggle="tab" href="#tab-deaths-{{player}}" role="tab" aria-controls="Deaths" aria-selected="false">Fragged by</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="link-weapons-{{player}}" data-toggle="tab" href="#tab-weapons-{{player}}" role="tab" aria-controls="Weapons" aria-selected="false">Weapons Used</a>
+                  <a class="nav-link" id="link-weapons-{{player}}" data-toggle="tab" href="#tab-weapons-{{player}}" role="tab" aria-controls="Weapons" aria-selected="false">Fragged Using</a>
                 </li>
               </ul>
             <div class="tab-content" id="tab-content-{{player}}">
