--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -6,16 +6,36 @@
     <title>UrT stats</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" crossorigin="anonymous">
     <style>
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
       body {
-        padding: 1rem 0;
+        font-family: 'Montserrat', sans-serif;
+      }
+      section {
+        width: 100%;
+      }
+      nav ul {
+        display: flex;
+        justify-content: center;
+      }
+      nav ul li {
+        text-transform: capitalize;
+        margin: 0 1em;
+      }
+      nav ul li a {
+        color: #01579b;
+      }
+      nav ul li a:hover {
+        text-decoration: none;
       }
       h1,
       h2,
       h3,
-      h4,
-      h5 {
+      h4 {
         text-align: center;
       }
       h4 {
@@ -24,8 +44,34 @@
         margin: 0;
         padding: 0.5em 0.75em;
       }
-      table td {
-        text-align:right;
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+      li {
+        line-height: 1.5;
+      }
+      table {
+        text-align: right;
+        width: 100%;
+      }
+      table,
+      th,
+      td {
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        padding: 0.5em;
+      }
+      thead {
+        background-color: #01579b;
+        color: #fff;
+        font-weight: 500;
+      }
+      tbody {
+        background-color: #eee;
       }
       table td:first-child,
       table th:first-child {
@@ -34,6 +80,44 @@
       tbody tr:hover {
         color: #01579b;
         cursor: pointer;
+      }
+      .container {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin: 0 auto;
+        max-width: 960px;
+      }
+      .grid {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -1em 0 0 -1em;
+      }
+      .grid-cell {
+        flex: 1;
+        margin: 0;
+        padding: 1em 0 0 1em;
+      }
+      .grid-fit > .grid-cell {
+        flex: 1;
+      }
+      .grid-full > .grid-cell {
+        flex: 0 0 100%;
+      }
+      .grid-1of2 > .grid-cell {
+        flex: 0 0 50%
+      }
+      .grid-1of3 > .grid-cell {
+        flex: 0 0 33.3333%
+      }
+      .grid-1of4 > .grid-cell {
+        flex: 0 0 25%
+      }
+      .box {
+        background-color: #eee;
+        border: 1px solid rgba(0, 0, 0, 0.05);
+        padding: 0.75em;
       }
       .dataTable-wrapper {
         width: 100%;
@@ -45,34 +129,26 @@
       .number {
         font-family: monospace;
       }
-      .card-player table {
-        margin-bottom: 0;
-      }
-      .card-player thead {
-        display: none;
-      }
       .go-up {
-        background-color: #2780e3;
+        background-color: #01579b;
         border-radius: 100%;
         bottom: 1em;
         color: #fff;
-        font-size: 2.5rem;
-        height: 1.25em;
-        line-height: 1em;
+        font-size: 2rem;
+        height: 1em;
+        line-height: 0.75em;
         position: fixed;
         right: 1em;
         text-align: center;
         text-decoration: none;
-        width: 1.25em;
+        width: 1em;
       }
     </style>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
-      <header class="jumbotron">
-        <h1 class="display-4">El Parque - UrT Stats</h1>
-      </header>
+      <h1>El Parque - UrT Stats</h1>
       <h2>{{server_data}}</h2>
       <h5>Updated: {{dt}}</h5>
       <ol>
@@ -80,7 +156,7 @@
         <li><a href="#{{player}}">{{player}}</a></li>
       {% endfor %}
       </ol>
-      <table id="stats" class="table table-bordered table-hover">
+      <table id="stats">
         <thead>
           <tr>
             <th>Name</th>
@@ -180,10 +256,7 @@
         {% endfor %} <!-- players -->
       </section> <!-- players section -->
     </div> <!-- container -->
-    <a href="#" class="go-up" role="button">&uarr;</a>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <a href="#" class="go-up">&uarr;</a>
   <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
-  <script>const dataTable = new simpleDatatables.DataTable("#stats", {"order": [[ 9, "desc" ]], "paging": false});</script>
   </body>
 </html>
