--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -96,7 +96,7 @@
           </tr>
         </thead>
         <tbody>
-        {% for player in general_data%}
+        {% for player in general_data %}
         <tr>
           <td><a href="#{{player.0}}">{{player.0}}</a></td>
           <td class="number">{{player.1}}</td>
@@ -114,9 +114,9 @@
       </table>
       <section>
         <h2>Player Profiles</h2>
-        {% for player in profiles %}
+        {% for player, data in profiles.items() %}
           <section id="{{player}}" class="card card-player mb-4">
-            <h3 class=card-header>{{player}}</h3>
+            <h3 class=card-header>{{data["name"]}}</h3>
             <ul class="nav nav-tabs nav-justified" id="tab-{{player}}" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link active" id="link-frags-{{player}}" data-toggle="tab" href="#tab-frags-{{player}}" role="tab" aria-controls="Frags" aria-selected="true">Fragged</a>
@@ -138,7 +138,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% for frag in profiles[player]['frags'] %}
+                    {% for frag in data["frags"] %}
                     <tr>
                       <td><a href="#{{frag[0]}}">{{frag[0]}}</a></td>
                       <td class="number">{{frag[1]}}</td>
@@ -156,7 +156,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% for death in profiles[player]['deaths'] %}
+                    {% for death in data["deaths"] %}
                     <tr>
                       <td><a href="#{{death[0]}}">{{death[0]}}</a></td>
                       <td class="number">{{death[1]}}</td>
@@ -174,7 +174,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% for weapon in profiles[player]['weapons'] %}
+                    {% for weapon in data["weapons"] %}
                       <tr>
                         <td>{{weapon[0]}}</td>
                         <td class="number">{{weapon[1]}}</td>
