No datatable bottom border

--- a/web_stats/index.j2
+++ b/web_stats/index.j2
@@ -38,6 +38,9 @@
       .dataTable-wrapper {
         width: 100%;
       }
+      dataTable-container {
+        border: none;
+      }
       .dataTable-top,
       .dataTable-bottom {
         padding: 0.5rem 0 !important;
